examples/negative/shadowing/user_some_collides_with_option.kai
# Negative fixture (#511 / shadowing contract): user-declared
# variant `Some` collides with `Option.Some`.

pub type Maybe2 = Some(Int) | Other

fn main() : Int = 0
